fix bug on privacy checkbox where it would overlapped by its label

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,8 @@
   }
 }
 
-button:hover{
+button:hover,
+input:hover{
   cursor: pointer;
 }
 
